finished team week4 all routes have documentation
