# models/temples.js
@@ -3,7 +3,7 @@ module.exports = (mongoose) => {
     'temples',
     mongoose.Schema(
       {
-        temple_id: Number,
+        temple_id: { type: Number, required: true, unique: true }, // To make sure temple_id is unique  
         name: String,
         location: String,
         dedicated: String,
